<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF00"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="raksam.com.atarukamokun.MainActivity">

    <!-- NEND表示用にBottomのPadingだけ０にした-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->

    <!-- 土台のresultView-->
    <TextView
        android:id="@+id/resultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded_corners_5dp"
        android:layout_marginTop="5dp"
        android:layout_centerInParent="true" />


    <!-- 結果表示ラベル(7個)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true">

        <TextView android:id="@+id/resultLabel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"/>

        <TextView android:id="@+id/resultLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"/>

        <TextView android:id="@+id/resultLabel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"/>

        <TextView android:id="@+id/resultLabel4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"/>

        <TextView android:id="@+id/resultLabel5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"/>

        <TextView android:id="@+id/resultLabel6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"/>

        <TextView android:id="@+id/resultLabel7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"/>

    </LinearLayout>

    <!-- 「あたるかもクン」の題名Linerレイアウト-->
    <LinearLayout
        android:id="@+id/titleLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/resultView"
        android:gravity="center_horizontal">

        <!-- 「あ」　-->
        <TextView
            android:id="@+id/viewA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FF0000"
            android:shadowColor="#FFFFFF"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="1"
            android:rotation="350"
            android:textStyle="bold"
            android:text="@string/title_a"
            android:textSize="60sp"/>

        <!-- 「た」　-->
        <TextView
            android:id="@+id/viewTA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFA500"
            android:shadowColor="#FFFFFF"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="1"
            android:rotation="10"
            android:textStyle="bold"
            android:text="@string/title_ta"
            android:textSize="60sp"/>

        <!-- 「る」　-->
        <TextView
            android:id="@+id/viewRU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFC0CB"
            android:shadowColor="#FFFFFF"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="1"
            android:rotation="350"
            android:textStyle="bold"
            android:text="@string/title_ru"
            android:textSize="60sp"/>

        <!-- 「かも」　-->
        <TextView
            android:id="@+id/viewKAMO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="#FF0000"
            android:text="@string/title_kamo"
            android:textSize="5sp"/>

         <!--「クン」　-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

        <!-- 「ク」　-->
        <TextView
            android:id="@+id/viewKU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="#006400"
            android:shadowColor="#FFFFFF"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="1"
            android:textStyle="bold"
            android:text="@string/title_ku"
            android:textSize="25sp"/>

        <!-- 「ン」　-->
        <TextView
            android:id="@+id/viewN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="#800080"
            android:shadowColor="#FFFFFF"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="1"
            android:textStyle="bold"
            android:text="@string/title_n"
            android:textSize="25sp"/>

        </LinearLayout>


    </LinearLayout>

    <!-- 設定ボタン -->
    <ImageButton
        android:id="@+id/setButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:src="@drawable/buttonselector"
        android:background="@drawable/haguruma"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/desc"/>


    <!-- 「黒点」Linerレイアウト-->
    <LinearLayout
        android:id="@+id/blackPointLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/resultView">

        <!-- BP1　-->
        <TextView
            android:id="@+id/BP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="30sp"
            android:text="@string/bp"/>

        <!-- BP2　-->
        <TextView
            android:id="@+id/BP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="30sp"
            android:text="@string/bp"/>

        <!-- BP3　-->
        <TextView
            android:id="@+id/BP3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="30sp"
            android:text="@string/bp"/>

        <!-- BP4　-->
        <TextView
            android:id="@+id/BP4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="30sp"
            android:text="@string/bp"/>

        <!-- BP5　-->
        <TextView
            android:id="@+id/BP5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="30sp"
            android:text="@string/bp"/>

    </LinearLayout>

    <!-- 「ボタン」Linerレイアウト-->
    <LinearLayout
        android:id="@+id/buttonLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/blackPointLinerLayout">

        <!-- NUM3-->
        <ImageButton
            android:id="@+id/num3Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:scaleX="0.7"
            android:scaleY="0.6"
            android:background="@drawable/numbers3"
            android:src="@drawable/buttonselector"
            android:contentDescription="@string/desc"/>

        <!-- NUM4-->
        <ImageButton
            android:id="@+id/num4Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:scaleX="0.7"
            android:scaleY="0.6"
            android:background="@drawable/numbers4"
            android:src="@drawable/buttonselector"
            android:contentDescription="@string/desc"/>

        <!-- MINILOTO-->
        <ImageButton
            android:id="@+id/miniLotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:scaleX="0.7"
            android:scaleY="0.6"
            android:background="@drawable/miniloto"
            android:src="@drawable/buttonselector"
            android:contentDescription="@string/desc"/>

        <!-- LOTO6-->
        <ImageButton
            android:id="@+id/loto6Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:scaleX="0.7"
            android:scaleY="0.6"
            android:background="@drawable/loto6"
            android:src="@drawable/buttonselector"
            android:contentDescription="@string/desc"/>

        <!-- LOTO7-->
        <ImageButton
            android:id="@+id/loto7Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:scaleX="0.7"
            android:scaleY="0.6"
            android:background="@drawable/loto7"
            android:src="@drawable/buttonselector"
            android:contentDescription="@string/desc"/>

    </LinearLayout>

</RelativeLayout>
